--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -13,6 +13,9 @@
       </h1>
       <h2 class="lo-text-uppercase">404 <span>&#183;</span> Page Not Found</h2>
       <p>Uh oh, we can't seem to find the page you're looking for.</p>
+      <a href="/">
+        <span>Return home</span>
+      </a>
     </section>
     <!-- Footer Section -->
     <%- include('../partials/footer'); %>
