--- a/views/pages/applicationSubmitted.ejs
+++ b/views/pages/applicationSubmitted.ejs
@@ -21,7 +21,7 @@
           </a> -->
         </section>
       </div>
-      <a class="nav-link" href="/">
+      <a href="/">
         <span>Return home</span>
       </a>
     </section>
