--- a/views/pages/failure.ejs
+++ b/views/pages/failure.ejs
@@ -15,11 +15,14 @@
         </section>
         <section class="lo-container-text-side">
           <h3>Oops! An error occured.</h3>
-          <p>Apologies for the inconvenience. Please try again.</p>
+          <p>
+            Apologies for the inconvenience.
+            <a href="/subscribe">Please try again.</a>
+          </p>
         </section>
       </div>
-      <a class="nav-link" href="/">
-        <span>Return home</span>
+      <a href="/subscribe">
+        <span>Subscribe</span>
       </a>
     </section>
     <!-- Footer Section -->
