--- a/views/partials/listings-favorites.ejs
+++ b/views/partials/listings-favorites.ejs
@@ -19,6 +19,7 @@
       Keep track of the programs you're interested in by clicking the
       <span> <i class="fa-solid fa-heart"></i> </span> icon.
     </p>
+    <a href="/">Find Programs</a>
   </section>
   <% } %>
   <ul>
