--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,11 +10,11 @@
 />
 
 <!-- External JavaScript -->
-<script
+<!-- <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
   integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
   crossorigin="anonymous"
-></script>
+></script> -->
 
 <!-- Internal CSS -->
 <link rel="stylesheet" href="../css/lo.css" />
