--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -22,7 +22,7 @@
     <!-- Footer Section -->
     <%- include('../partials/footer'); %>
 
-    <!-- External JavaScript and jQuery -->
+    <!-- JavaScript -->
     <script src="/js/search.js"></script>
     <script src="/js/listings.js"></script>
   </body>
