--- a/views/pages/resources.ejs
+++ b/views/pages/resources.ejs
@@ -14,7 +14,7 @@
       <!-- Footer Section -->
       <%- include('../partials/footer'); %>
     </section>
-    <!-- External JavaScript and jQuery -->
+    <!-- JavaScript -->
     <script src="../js/carousel.js" charset="utf-8"></script>
   </body>
 </html>
