--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,11 +10,12 @@
 />
 
 <!-- External JavaScript -->
-<!-- <script
+<!-- bootstrap js is only being used for the drop-down nav in mobile. Best to get rid of it. -->
+<script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
   integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
   crossorigin="anonymous"
-></script> -->
+></script>
 
 <!-- Internal CSS -->
 <link rel="stylesheet" href="../css/lo.css" />
