--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,14 +1,13 @@
 <footer>
   <div class="footercontainer">
     <a target="_blank" href="https://www.instagram.com/">
-      <i class="footericon fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-instagram"></i>
     </a>
     <a target="_blank" href="https://linkedin.com/">
-      <i class="footericon fa-brands fa-linkedin"></i>
+      <i class="fa-brands fa-linkedin"></i>
     </a>
     <a href="mailto: boe@boe.com">
-      <i class="footericon fa-solid fa-envelope"></i>
+      <i class="fa-solid fa-envelope"></i>
     </a>
   </div>
 </footer>
-
