comment on how to add photo

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -12,7 +12,7 @@
             <!-- insert user profile photo here: -->
             <!-- <img
               class="lo-avatar"
-              src="/images/carousel/healthcareworker.jpeg"
+              src="user.image" // this image variable is an example - not really coded
               alt="user avatar or profile photo"
             /> -->
           </div>
