--- a/views/partials/calendly.ejs
+++ b/views/partials/calendly.ejs
@@ -1,6 +1,6 @@
 <!-- Calendly inline widget -->
 <div
-  class="calendly-inline-widget"
+  class="calendly-inline-widget lo-calendly-inline-widget"
   data-url="https://calendly.com/boepartners/discovery?hide_gdpr_banner=1&primary_color=437e58"
   style="border-radius: 25px"
 ></div>
