removed bootstrap class. Renamed class

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-  <div class="footercontainer">
+  <div class="lo-footer-container">
     <a target="_blank" href="https://www.instagram.com/">
       <i class="fa-brands fa-instagram"></i>
     </a>
