--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -1018,23 +1018,23 @@ section.lo-favorites-list-empty p {
   bottom: 0;
 }
 
-.lo-body footer .footercontainer {
+.lo-body footer .lo-footer-container {
   padding: 10px;
   text-align: center;
 }
 
-.lo-body footer .footercontainer a {
+.lo-body footer .lo-footer-container a {
   text-decoration: none;
   cursor: pointer;
 }
 
-.lo-body footer .footercontainer i {
+.lo-body footer .lo-footer-container i {
   color: var(--text-color-dark);
   margin: 0 15px;
   font-size: 1.5em;
 }
 
-.lo-body footer .footercontainer i:hover {
+.lo-body footer .lo-footer-container i:hover {
   color: var(--logo-color);
 }
 
