add school id and user id to premium  application

--- a/views/partials/application-premium.ejs
+++ b/views/partials/application-premium.ejs
@@ -10,6 +10,11 @@
       name="organization"
       value="<%= school.name %>"
     />
+    <input 
+      type="hidden" 
+      name="org_id" 
+      value="<%= school._id %>" 
+    />
 
     <label for="firstname">First Name</label>
     <input
