--- a/views/partials/application.ejs
+++ b/views/partials/application.ejs
@@ -5,6 +5,11 @@
     name="organization"
     value="<%= school.name %>"
   />
+  <input 
+    type="hidden" 
+    name="org_id" 
+    value="<%= school._id %>" 
+  />
   <input
     class="orgApplicationURL"
     type="hidden"
