--- a/views/partials/form-subscribe.ejs
+++ b/views/partials/form-subscribe.ejs
@@ -10,6 +10,7 @@
     class="fnameinput form-control"
     name="fname"
     autocomplete="given-name"
+    value="<%= isAuthenticated ? name : "" %>"
     required
   />
   <label for="lname" class="form-label">Last Name</label>
@@ -18,6 +19,7 @@
     class="lnameinput form-control"
     name="name"
     autocomplete="family-name"
+    value="<%= isAuthenticated ? name : "" %>"
     required
   />
   <label for="email" class="form-label">Email</label>
@@ -26,6 +28,7 @@
     class="emailinput form-control"
     name="email"
     autocomplete="email"
+    value="<%= isAuthenticated ? email : "" %>"
     required
   />
   <label for="city" class="form-label">City</label>
