change name='name' in last name input to name='lname'

--- a/views/partials/form-subscribe.ejs
+++ b/views/partials/form-subscribe.ejs
@@ -17,7 +17,7 @@
   <input
     type="text"
     class="lnameinput form-control"
-    name="name"
+    name="lname"
     autocomplete="family-name"
     value="<%= isAuthenticated ? name : "" %>"
     required
