--- a/views/partials/form-subscribe.ejs
+++ b/views/partials/form-subscribe.ejs
@@ -20,7 +20,7 @@
   <label for="lname" class="form-label">Last Name</label>
   <input
     type="text"
-    name="name"
+    name="lname"
     autocomplete="family-name"
     value="<%= isAuthenticated ? name : "" %>"
     required
