--- a/views/partials/listings-depth.ejs
+++ b/views/partials/listings-depth.ejs
@@ -1,12 +1,6 @@
 <section class="indepthlist list-group lo-in-depth-list">
   <ul class="galleryUL" id="lo-in-depth-list">
-    <% let sortedSchools = [...schools] %> 
-    <% sortedSchools.sort((a, b) => { %> 
-    <% if (a.name < b.name) { %> 
-    <% return -1; %> 
-    <% } %> 
-    <% }); %> 
-    <% sortedSchools.forEach(function(school, i) { %> 
+    <% schools.forEach(function(school, i) { %> 
     <li
       data-id=<%= school._id %>
       class="indepthlistitema list-group-item list-group-item-action <%= (i === 0) ? "show" : "" %>"
